# KnowledgeGraphGenerator-

./: .gitignore  README.md  build.ps1  dataOld.py  gui.py  main.py  pyproject.toml  requirements.txt
data/: data.py  dataManager.py  edge.py  edgeDef.py  node.py  nodeDef.py  project.py  table.py
gui/: __init__.py  app.py  dataSettings.py  dataSource.py  edgeSettings.py  generateData.py  nodeSettings.py  paths.py  tabs.py
networkgen/: __init__.py  builder.py  datasource.py  definitions.py  errors.py  preview.py  project.py  utils.py
