[project]
name = "knowledge-graph-generator"
version = "0.1.0"
description = "A tool to create a node graph to visualize connections between data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.3",
    "sv-ttk>=2.6.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
]
